# drf-recipe-04

./: README.md  pyproject.toml
config/: urls.py
food/: admin.py  models.py
recipe/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
user/: models.py  serializers.py  urls.py  views.py
